<resources>
    <string name="app_name">Merchant</string>
    <string name="sign_in">Sign in</string>
    <string name="agent_code">Agent Code</string>
    <string name="agent_phone_no">Agent Phone No</string>
    <string name="login">Login</string>
    <string name="support1">Having issues signing in please contact</string>
    <string name="support">Support</string>
    <string name="slider1">Select flexible payment plans to refund your loan without being hassled</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="borrow_money">Request a loan</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Sign out</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="click_here">Click here</string>
    <string name="forgotten_pin">Forgotten PIN ?</string>
    <string name="enter_4_digit_pin">Enter 4 Digit PIN</string>
    <string name="re_type_pin">Re-Type PIN</string>
    <string name="submit">Submit</string>
    <string name="forgotten_access_code">Forgotten Access code ?</string>
    <string name="create_pin">Create PIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code">Code:</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="territory">Territory</string>
    <string name="maximum_loan">Loan Limit</string>
    <string name="loan_status">Loan Status</string>
    <string name="agent">Agent</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="duration">Duration: </string>
    <string name="_10_days">10 DAYS</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="proceed">Proceed</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="bvn">BVN</string>
    <string name="next">Next</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_type">Account Type</string>
    <string name="card_type">Card type</string>
    <string name="edit_bank_details">Edit bank details</string>
    <string name="card_no">Card No</string>
    <string name="cvv">CVV</string>
    <string name="card_details">Card details</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="no_card">No card \n Please click on Add to enter card detail</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="request_loan">Request a Loan</string>
    <string name="loan_details">Loan Details</string>
    <string name="due_date">Due date</string>
    <string name="total_amount">Total_amount</string>
    <string name="interest_rate">Interest rate</string>
    <string name="extra_charge">Extra charge</string>
    <string name="input_your_password">Input your Agent Code</string>
    <string name="access_code">Agent Code</string>
    <string name="request_text">Please confirm that you are ready to request for a loan</string>
    <string name="invest_msg">You can start taking your loan with interest rate as low as 2%</string>
    <string name="start_investing_now">Start you Easy Loan</string>
    <string name="morning">Good morning</string>
    <string name="afternoon">Good afternoon</string>
    <string name="evening">Good evening</string>
    <string name="slider2">Need instant cash to make payment? Get a loan with Fewchore Merchant in less than three steps.</string>
    <string name="no_history">No available History yet</string>
    <string name="post">Post…</string>
    <string name="contact_support">Contact Support</string>
    <string name="code_auth">Authenticate your Code</string>
    <string name="your_max_limit">Your Limit</string>
    <string name="pay_now">Pay Now</string>
    <string name="pending_loan">Pending Loan</string>
    <string name="outstanding_amount">Utilized Amount</string>
    <string name="request_a_loan">Request A Loan</string>
    <string name="returning_customers">Returning customer</string>
    <string name="new_customers">New Customer</string>
    <string name="set_up_mpin">Setup your Mobile PIN</string>
    <string name="verify_mobile_pin">Verify your Mobile PIN</string>
    <string name="full_name">Full Name</string>
    <string name="pub_key">pk_live_d96cb0482afe67ab20eac8d5eb290d47a6b35bea</string>
    <string name="faq">FAQs</string>
    <string name="no_available_faq">No Available FAQ</string>
    <string name="loan_due_date">Loan Due Date</string>
    <string name="days_over_due">Days Over Due</string>
    <string name="return_customer">Returning Customer</string>
    <string name="first_customer">First time Customer</string>
    <string name="otp">OTP</string>
    <string name="dash">--</string>
    <string name="select_a_card_to_make_your_payment">Select a card to make your payment</string>
    <string name="pay_all">Pay All</string>
    <string name="installment_payment">Installment Payment</string>
    <string name="text_instalment">Please select the amount you which to pay from your Total loan.</string>
    <string name="enter_instalment_payment_amount"> Instalment Amount</string>
    <string name="instalment_payment">Instalment Payment</string>
    <string name="loan_history">Loan history</string>
    <string name="total_payback">Total payback:</string>
    <string name="interest">Interest</string>
    <string name="loan_total">Loan Total</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="phone_msg">To change your PIN enter your phone number to receive OTP. use this to create a new PIN</string>
    <string name="get_otp">Get OTP</string>
</resources>
