<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="240dp"
    android:minWidth="280dp"
    android:layout_margin="10dp"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_msg"
        android:textSize="18sp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/ediPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/phone_number"
        android:padding="10dp"
        android:inputType="phone"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/get_otp"
        android:background="@drawable/rectangle_green"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>
</LinearLayout>