<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_splash">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returning_customers"
            android:textSize="16sp"
            android:layout_gravity="center"/>
        <merchant.com.our.merchant.view.PoppinsButton
            android:id="@+id/buttonVerifyPin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/verify_mobile_pin"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/rectangle_white"/>
        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_customers"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_gravity="center"/>
        <merchant.com.our.merchant.view.PoppinsButton
            android:id="@+id/buttonSetupPin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/set_up_mpin"
            android:textAllCaps="false"
            android:background="@drawable/rectangle_green"
            android:textSize="18sp"/>
    </LinearLayout>
    <include layout="@layout/template_progress"/>
</android.support.constraint.ConstraintLayout>