<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:ignore="HardcodedText"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/bck_profile"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:gravity="center"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:orientation="vertical">

            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_details"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/green"/>

            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <merchant.com.our.merchant.view.PoppinsLightTextView
                android:id="@+id/textBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"/>

            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <merchant.com.our.merchant.view.PoppinsLightTextView
                android:id="@+id/textAcctNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*********032"
                android:textColor="@color/green" />

            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_type"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <merchant.com.our.merchant.view.PoppinsLightTextView
                android:id="@+id/textAcctType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Savings"
                android:textColor="@color/green"/>

            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bvn"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <merchant.com.our.merchant.view.PoppinsLightTextView
                android:id="@+id/textBVN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*********0332"
                android:textColor="@color/green"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>