<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Password-->
        <LinearLayout
            android:id="@+id/linearPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_text"
                android:textAlignment="center"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_your_password"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@color/white">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <merchant.com.our.merchant.view.PoppinsEditText
                        android:id="@+id/editAccessCode"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:hint="@string/access_code"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guide"
                android:background="@drawable/rectangle_green"
                android:textColor="@color/white"
                android:text="@string/request_loan"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>



</FrameLayout>