<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_details"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="end"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="20sp"
        android:paddingLeft="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editCardNo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/card_number"
            android:digits="01234 56789"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/expiry_date"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCVV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/cvv"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
</LinearLayout>



        <merchant.com.our.merchant.view.PoppinsButton
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="@drawable/rectangle_green"
            android:textColor="@color/white"
            android:text="@string/next"
            android:textAllCaps="false"
            android:drawablePadding="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />


</android.support.constraint.ConstraintLayout>