<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardBank"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/white">
        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:textSize="18sp"/>

        <merchant.com.our.merchant.view.PoppinsLightTextView
            android:id="@+id/textBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_type"
            android:gravity="end"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/text"
            android:layout_toRightOf="@+id/text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:id="@+id/text1"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:textSize="18sp"
            android:layout_below="@+id/text"/>

        <merchant.com.our.merchant.view.PoppinsLightTextView
            android:id="@+id/textAcctNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_type"
            android:gravity="end"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/text1"
            android:layout_toRightOf="@+id/text1"
            android:layout_below="@id/text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_type"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/text1"/>

        <merchant.com.our.merchant.view.PoppinsLightTextView
            android:id="@+id/textAcctType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_type"
            android:gravity="end"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/text2"
            android:layout_toRightOf="@+id/text2"
            android:layout_below="@id/text1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

        <merchant.com.our.merchant.view.PoppinsButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_bank_details"
            android:layout_below="@id/text2"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>