<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".fragment.LoanFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount"/>

        <merchant.com.our.merchant.view.PoppinsEditText
            android:id="@+id/editLoanAmt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_nigeria_naira_green"
            android:drawableStart="@drawable/ic_nigeria_naira_green"
            android:drawablePadding="10dp"
            android:padding="10dp"
            
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_rectangle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textAllCaps="false"
                android:textStyle="bold"/>


            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_days"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount_payable"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"/>

        <merchant.com.our.merchant.view.PoppinsBoldTextView
            android:id="@+id/textTotal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_nigeria_naira_green"
            android:drawableLeft="@drawable/ic_nigeria_naira_green"
            android:drawablePadding="10dp"
            android:background="@drawable/grey_rectangle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_max_limit"
                android:textAllCaps="false"
                android:textStyle="bold"/>


            <merchant.com.our.merchant.view.PoppinsBoldTextView
                android:id="@+id/textLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_nigeria_naira_green"
                android:drawableLeft="@drawable/ic_nigeria_naira_green"
                android:drawablePadding="4dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <merchant.com.our.merchant.view.PoppinsButton
        android:id="@+id/buttonProceed"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_green"
        android:textColor="@color/white"
        android:text="@string/proceed"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>